# c-project

./: .gitignore  CMakeLists.txt  README.md  config.toml  environment.yml  mvp.html
docs/: Doxyfile  architecture.rst  client.rst  conf.py  index.rst  server.rst  shared.rst
src/client/: main.c
src/common/: shared.h
src/server/: main.c
tests/: test_game.c  utest.h
